[gd_scene load_steps=37 format=2]

[ext_resource path="res://images/weapons/bomb/bomb_on_ground_anim_strip_8.png" type="Texture" id=1]
[ext_resource path="res://images/crosshairs/Crosshair16.png" type="Texture" id=2]
[ext_resource path="res://src/weapons/Bomb.gd" type="Script" id=3]
[ext_resource path="res://images/weapons/bomb/bomb_thrown_anim_strip_3.png" type="Texture" id=4]
[ext_resource path="res://fonts/body text/Pixels TEXT.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://images/weapons/bomb/explosion.png" type="Texture" id=6]
[ext_resource path="res://src/helpers/Label.gd" type="Script" id=7]
[ext_resource path="res://src/helpers/Hitbox.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16.6224, 2.83319 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 8, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 8, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 24, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 40, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 56, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 6 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 6 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 6 )
region = Rect2( 128, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 6 )
region = Rect2( 192, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 6 )
region = Rect2( 256, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 6 )
region = Rect2( 0, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 6 )
region = Rect2( 64, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 6 )
region = Rect2( 128, 192, 64, 64 )

[sub_resource type="SpriteFrames" id=21]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "ready",
"speed": 8.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": false,
"name": "go",
"speed": 8.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), null ],
"loop": false,
"name": "explode",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=22]
radius = 12.0

[sub_resource type="DynamicFont" id=23]
font_data = ExtResource( 5 )

[sub_resource type="Gradient" id=24]
colors = PoolColorArray( 1, 1, 1, 0.784314, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=25]
gradient = SubResource( 24 )

[sub_resource type="Curve" id=26]
_data = [ Vector2( 0, 0.297297 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.220721 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=27]
curve = SubResource( 26 )

[sub_resource type="ParticlesMaterial" id=28]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 27 )
color_ramp = SubResource( 25 )

[node name="Bomb" type="KinematicBody2D"]
position = Vector2( -0.302078, 0.67968 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 0.160001, 1 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -1 )
frames = SubResource( 21 )
animation = "explode"
frame = 8
playing = true

[node name="CircleSprite" type="Sprite" parent="AnimatedSprite"]

[node name="TooLongTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="ExplodeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Hitbox" parent="." instance=ExtResource( 8 )]
position = Vector2( -0.454086, -1.93405 )
scale = Vector2( 1.64, 1.77057 )

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 22 )

[node name="Labels" type="Node2D" parent="."]

[node name="TimerLabel" type="Label" parent="Labels"]
margin_left = -24.5976
margin_top = -15.7248
margin_right = 26.4024
margin_bottom = 4.27521
custom_fonts/font = SubResource( 23 )
text = "3"
align = 1
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Audio" type="Node2D" parent="."]

[node name="ExplosionAudio" type="AudioStreamPlayer2D" parent="Audio"]

[node name="BounceAudio" type="AudioStreamPlayer2D" parent="Audio"]

[node name="StreamParticles" type="Particles2D" parent="."]
show_behind_parent = true
scale = Vector2( 0.2, 0.2 )
lifetime = 0.5
visibility_rect = Rect2( -320, -180, 640, 360 )
local_coords = false
draw_order = 1
process_material = SubResource( 28 )
texture = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="timeout" from="TooLongTimer" to="." method="_on_TooLongTimer_timeout"]
[connection signal="timeout" from="ExplodeTimer" to="." method="_on_ExplodeTimer_timeout"]
[connection signal="finished" from="Audio/ExplosionAudio" to="." method="_on_ExplosionAudio_finished"]

[editable path="Hitbox"]
